# Aspen

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Doxyfile  LICENSE  README.md  startup  style
angelscript/: CMakeLists.txt  Makefile  as_config.h  contextmgr.cpp  scriptarray.cpp  scriptdictionary.cpp  scriptgrid.cpp  scripthelper.cpp  scriptmath.cpp  scriptstdstring.cpp  scriptstdstring_utils.cpp
data/areas/: start
data/players/: Negasi
data/state/: banlist
docs/html/: ChannelManager_8h_source.html  ComponentFactory_8h_source.html  FactoryManager_8h_source.html  IFactory_8hpp_source.html  LivingStats_8h_source.html  affect_8h_source.html  alias_8h_source.html  annotated.html  attribute_8h_source.html  banList_8h_source.html  baseObject_8h_source.html  baseSocket_8h_source.html  bitfield_8h_source.html  calloutManager_8h_source.html  callout_8h_source.html  channel_8h_source.html  classAffect-members.html  classAffect.html  classAlias-members.html  classAlias.html  classAttribute-members.html  classAttribute.html  classBanList-members.html  classBanList.html  classBaseObject-members.html  classBaseObject.html  classBaseSocket-members.html  classBaseSocket.html  classBitfield-members.html  classBitfield.html  classCMDAStats-members.html  classCMDAStats.html  classCMDAddComponent-members.html  classCMDAddComponent.html  classCMDBackup-members.html  classCMDBackup.html  classCMDBan-members.html  classCMDBan.html  classCMDChan-members.html  classCMDChan.html  (+409 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  classes_15.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  (+30 more)
frisk/inc/: ConsoleReporter.h  FailureInfo.h  Frisk.h  Reporter.h  Test.h  TestCollection.h  expectations.h  frisk_config.h
frisk/src/: ConsoleReporter.cpp  Makefile  Makefile~  Test.cpp  TestCollection.cpp
include/: scriptmath.h  tinyxml.h  tinyxml2.h
jsoncpp/: CMakeLists.txt
lib/: README
src/: BuildConfig.h.in  CMakeLists.txt  ChannelManager.cpp  ChannelManager.h  ComponentFactory.cpp  ComponentFactory.h  Makefile  affect.cpp  affect.h  alias.cpp  alias.h  attribute.cpp  attribute.h  banList.cpp  banList.h  baseObject.cpp  baseObject.h  baseSocket.cpp  baseSocket.h  bitfield.cpp  bitfield.h  callout.cpp  callout.h  calloutManager.cpp  calloutManager.h  channel.cpp  channel.h  com_builder.cpp  com_builder.h  com_gen.cpp  com_gen.h  com_movement.cpp  com_movement.h  com_wiz.cpp  com_wiz.h  command.cpp  command.h  component.cpp  component.h  componentMeta.cpp  (+106 more)
src/extensions/: conf.h  eventDefs.h  extensions.cpp  extensions.h  include.mod  make.inc  utils.cpp  utils.h
src/help/: HelpEntry.cpp  HelpEntry.h  HelpTable.cpp  HelpTable.h  help.cpp  help.h  include.mod
src/mods/: include.mod  mods.cpp
src/modules/: include.mod  modules.cpp  modules.h
src/modules/board/: board.cpp  board.h  boardManager.cpp  boardManager.h  boardModule.cpp  boardModule.h  boardPost.cpp  boardPost.h  include.mod
src/scripts/: helper.h  helper.hpp  include.mod  scr_BaseObject.cpp  scr_BaseObject.h  scr_Entity.cpp  scr_Entity.h  scr_Exit.cpp  scr_Exit.h  scr_ObjectContainer.cpp  scr_ObjectContainer.h  scr_Player.cpp  scr_Player.h  scr_Room.cpp  scr_Room.h  scr_entity.cpp  scr_entity.h  scr_events.cpp  scr_events.h  scr_player.cpp  scr_player.h  scr_room.cpp  scr_room.h  scr_world.cpp  scr_world.h  script.cpp  script.h  scripts.cpp  scripts.h
src/syslog/: include.mod  syslog.cpp  syslog.h
src/xml/: tinystr.cpp  tinyxml.cpp  tinyxmlerror.cpp  tinyxmlparser.cpp
tests/: test_ComponentFactory.h  test_affect.h  test_alias.h  test_attribute.h  test_banList.h  test_baseObject.h  test_baseSocket.h  test_bitfield.h  test_callout.h  test_calloutManager.h  test_channel.h  test_com_builder.h  test_com_gen.h  test_com_movement.h  test_com_wiz.h  test_command.h  test_component.h  test_componentMeta.hpp  test_components.h  test_delayedEvent.h  test_door.h  test_editor.h  test_entity.h  test_event.h  test_eventManager.h  test_eventargs.h  test_exception.h  test_exit.h  test_flag.h  test_inputHandlers.h  test_listener.h  test_living.h  test_log.h  test_main.cpp  test_main.cpp~  test_match.h  test_modules.h  test_npc.h  test_objectManager.h  test_olc.h  (+25 more)
tests/extensions/: test_extensions.h
tests/help/: test_HelpEntry.h  test_HelpTable.h  test_help.h
tests/modules/: test_modules.h
tests/modules/board/: test_board.h  test_boardManager.h  test_boardModule.h  test_boardPost.h
tests/scripts/: test_helper.hpp  test_scr_BaseObject.h  test_scr_Entity.h  test_script.h
tests/syslog/: test_syslog.h
txt/: motd  welcome
xml/: CMakeLists.txt  Makefile  tinyxml.cpp  tinyxmlerror.cpp  tinyxmlparser.cpp
